--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "svelte": "^3.52.0",
     "svelte-check": "^2.9.2",
     "svelte-preprocess": "^4.10.7",
+    "svelte-sidebar-menu": "^0.9.12",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.0"
