--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "vite": "^3.2.0"
   },
   "dependencies": {
-    "svelte_sidebar": "^0.1.1"
+    "@rollup/plugin-json": "^5.0.1",
+    "svelte_sidebar": "^0.1.1",
+    "svelte-vega": "^1.2.0"
   }
 }
