--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vite": "^3.2.0"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "svelte_sidebar": "^0.1.1",
     "svelte-vega": "^1.2.0"
   }
