--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,7 @@
             "request": "launch",
             "name": "Launch Chrome against localhost",
             "url": "http://localhost:5173",
-            "webRoot": "${workspaceFolder}/src",
-            "runtimeExecutable": "stable"
+            "webRoot": "${workspaceFolder}/src"
         }
     ]
 }
