--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "graph-format-converter": "^1.5.2",
     "graphml-js": "^0.4.0",
     "lodash": "^4.17.21",
+    "papaparse": "^5.3.2",
     "svelte_sidebar": "^0.1.1",
     "svelte-vega": "^1.2.0"
   }
