--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "graphml-js": "^0.4.0",
     "lodash": "^4.17.21",
     "papaparse": "^5.3.2",
+    "svelte-vega": "^1.2.0",
     "svelte_sidebar": "^0.1.1",
-    "svelte-vega": "^1.2.0"
+    "vega": "^5.22.1",
+    "vega-embed": "^6.21.0",
+    "vega-lite": "^5.6.0"
   }
 }
