--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "graph-format-converter": "^1.5.2",
     "graphml-js": "^0.4.0",
     "lodash": "^4.17.21",
+    "node-sass": "^8.0.0",
     "papaparse": "^5.3.2",
+    "sass": "^1.56.1",
+    "svelte-vega": "^1.2.0",
     "svelte_sidebar": "^0.1.1",
-    "svelte-vega": "^1.2.0"
+    "vega": "^5.22.1",
+    "vega-lite": "^5.6.0"
   }
 }
