Add network color from palette

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vite": "^3.2.0"
   },
   "dependencies": {
+    "@untemps/svelte-palette": "^1.9.2",
     "cors": "^2.8.5",
     "fast-xml-parser": "^4.0.11",
     "graph-format-converter": "^1.5.2",
