--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+firebase_config.ts
+
 # File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,linux,node,svelte
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,linux,node,svelte
