--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "devDependencies": {
     "@rollup/plugin-json": "^5.0.1",
+    "@rollup/plugin-replace": "^5.0.1",
     "@sveltejs/vite-plugin-svelte": "^14.18.0",
     "@tsconfig/svelte": "^3.0.0",
     "carbon-components-svelte": "^0.70.12",
+    "dotenv": "^16.0.3",
     "svelte": "^3.52.0",
     "svelte-check": "^2.9.2",
     "svelte-preprocess": "^4.10.7",
@@ -28,6 +30,7 @@
     "cors": "^2.8.5",
     "decompress-response": "^8.0.0",
     "fast-xml-parser": "^4.0.11",
+    "firebase": "^9.14.0",
     "graph-format-converter": "^1.5.2",
     "graphml-js": "^0.4.0",
     "lodash": "^4.17.21",
