--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
     "vite": "^3.2.0"
   },
   "dependencies": {
+    "@firebase/app-types": "^0.8.1",
+    "@firebase/firestore-types": "^2.5.1",
+    "@firebase/util": "^1.7.3",
     "@untemps/svelte-palette": "^1.9.2",
     "cors": "^2.8.5",
+    "crypto-random-string": "^5.0.0",
     "decompress-response": "^8.0.0",
     "fast-xml-parser": "^4.0.11",
     "firebase": "^9.14.0",
