--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cors": "^2.8.5",
     "crypto-random-string": "^5.0.0",
     "decompress-response": "^8.0.0",
+    "email-validator": "^2.0.4",
     "fast-xml-parser": "^4.0.11",
     "firebase": "^9.14.0",
     "graph-format-converter": "^1.5.2",
