--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "svelte-sidebar-menu": "^0.9.12",
     "svelte-switch-case": "^2.0.0",
     "tslib": "^2.4.0",
-    "typescript": "^4.6.4",
+    "typescript": "^4.9.4",
     "vite": "^3.2.0"
   },
   "dependencies": {
@@ -30,6 +30,7 @@
     "@firebase/firestore-types": "^2.5.1",
     "@firebase/util": "^1.7.3",
     "@untemps/svelte-palette": "^1.9.2",
+    "color": "^4.2.3",
     "cors": "^2.8.5",
     "crypto-random-string": "^5.0.0",
     "decompress-response": "^8.0.0",
@@ -44,6 +45,7 @@
     "sass": "^1.56.1",
     "svelte-vega": "^1.2.0",
     "vega": "^5.22.1",
+    "vega-functions": "^5.13.0",
     "vega-lite": "^5.6.0"
   }
 }
