--- a/backend/functions/tsconfig.json
+++ b/backend/functions/tsconfig.json
@@ -2,14 +2,17 @@
   "compilerOptions": {
     "module": "commonjs",
     "noImplicitReturns": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
     "target": "es2017"
   },
+  "parserOptions": {
+    "project": "tsconfig.json",
+    "tsconfigRootDir": "__dirname"
+  },
+
   "compileOnSave": true,
-  "include": [
-    "src"
-  ]
+  "include": ["src", "backend"]
 }
