--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -15,16 +15,20 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "axios": "^1.2.1",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^4.1.1"
   },
   "devDependencies": {
+    "@types/request-promise": "^4.1.48",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^0.2.0",
+    "node-fetch": "^3.3.0",
+    "request-promise": "^4.2.6",
     "typescript": "^4.5.4"
   },
   "private": true
