--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,13 +3,15 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
+    "python.pythonPath": "C:\\Users\\PC\\anaconda3\\envs\\gestures\\python.exe",
     "configurations": [
         {
-            "type": "chrome",
+            "name": "Python: Current File",
+            "type": "python",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:5173",
-            "webRoot": "${workspaceFolder}/frontend"
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "justMyCode": true
         }
     ]
 }
