--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,4 +22,4 @@ make_experiments:
     - conda install pyg -c pyg
     - pip install flask snakecase py-healthcheck gunicorn
   script:
-    - cd backend/ml/src && gunicorn  --bind 0.0.0.0:9000 main:app
+    - cd backend/ml/src && gunicorn  --bind 0.0.0.0:9000 main:app --daemon
