--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
 
 image: pytorch/pytorch:latest
 
-make_experiments:
+xtai_lab3_deploy:
   stage: deploy
   variables:
     PYTHONUNBUFFERED: 1
@@ -15,5 +15,11 @@ make_experiments:
     PIP_NO_CACHE_DIR: "off"
     PIP_DISABLE_PIP_VERSION_CHECK: 1
     PIP_DEFAULT_TIMEOUT: 100
+  before_script:
+    - apt-get update && apt-get upgrade -y
+    - conda update pip
+    - conda install pytorch torchvision torchaudio pytorch-cuda=11.6 -c pytorch -c nvidia
+    - conda install pyg -c pyg
+    - pip install flask snakecase py-healthcheck gunicorn
   script:
-    - echo "CI/CD is replaced to the docker-compose"
+    - cd backend/ml/src && gunicorn  --bind 0.0.0.0:9000 main:app --daemon
