Found a bag with nvidia driver, coming back to image with cuda==11.6.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ default:
 stages:
   - deploy
 
-image: pytorch/pytorch:latest
+image: pytorch/pytorch:1.13.1-cuda11.6-cudnn8-runtime
 
 xtai_lab3_deploy:
   stage: deploy
