--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ default:
 stages:
   - deploy
 
-image: pytorch/pytorch:1.13.1-cuda11.6-cudnn8-runtime
+image: pytorch/pytorch:latest
 
 xtai_lab3_deploy:
   stage: deploy
@@ -18,7 +18,7 @@ xtai_lab3_deploy:
   before_script:
     - apt-get update && apt-get upgrade -y
     - conda update pip
-    - conda install pytorch torchvision torchaudio pytorch-cuda=11.6 -c pytorch -c nvidia
+    - conda install pytorch torchvision torchaudio pytorch-cuda=11.7 -c pytorch -c nvidia
     - conda install pyg -c pyg
     - pip install flask snakecase py-healthcheck gunicorn
     - python --version
