Update networksList according to edited node

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "firebase": "^9.14.0",
     "graph-format-converter": "^1.5.2",
     "graphml-js": "^0.4.0",
+    "json-strictify": "^8.0.0",
     "lodash": "^4.17.21",
     "node-sass": "^8.0.0",
     "papaparse": "^5.3.2",
