--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,4 +12,4 @@ docker_image:
     - echo $VINGILOT_PRIVATE_KEY > ~/.ssh/uni_wuerzburg_cluster
     - echo -e "Host login6 \n\tHostname login6.informatik.uni-wuerzburg.de \n\tUser $VINGILOT_USER \n\tIdentityFile ~/.ssh/uni_weurzburg_cluster" > ~/.ssh/config
     - echo -e "Host vingilot \n\tHostname vingilot.informatik.uni-wuerzburg.de \n\tUser $VINGILOT_USER \n\tProxyCommand ssh login6 nc %h %p \n\tIdentityFile ~/.ssh/uni_weurzburg_cluster" >> ~/.ssh/config
-    - ssh vingilot -t 'cat /etc/os-release'
+    - ssh vingilot
