--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,9 @@ stages:
 docker_image:
   stage: build
   script:
+    - apt update && apt -y upgrade && apt install openssh-client netcat -y
     - mkdir -p ~/.ssh
     - echo $VINGILOT_PRIVATE_KEY > ~/.ssh/uni_wuerzburg_cluster
-    - echo -e "Host login6 \n\tHostname login6.informatik.uni-wuerzburg.de \n\tUser $VINGILOT_USER \n\tIdentityFile ~/.ssh/uni_weurzburg_cluster" > ~/.ssh/config
-    - echo -e "Host vingilot \n\tHostname vingilot.informatik.uni-wuerzburg.de \n\tUser $VINGILOT_USER \n\tProxyCommand ssh login6 nc %h %p \n\tIdentityFile ~/.ssh/uni_weurzburg_cluster" >> ~/.ssh/config
-    - ssh vingilot
+    - echo -e "Host login6 \n\t Hostname login6.informatik.uni-wuerzburg.de \n\t User $VINGILOT_USER \n\t IdentityFile ~/.ssh/uni_weurzburg_cluster" > ~/.ssh/config
+    - echo -e "Host vingilot \n\t Hostname vingilot.informatik.uni-wuerzburg.de \n\t User $VINGILOT_USER \n\t ProxyCommand ssh login6 nc %h %p \n\t IdentityFile ~/.ssh/uni_weurzburg_cluster" >> ~/.ssh/config
+    - ssh -T vingilot
