--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ docker_image:
     - echo "${VINGILOT_PRIVATE_KEY}" > ~/.ssh/uni_wuerzburg_cluster
     - chmod 600 ~/.ssh/uni_wuerzburg_cluster
     - echo "${VINGILOT_PUBLIC_KEY}" > ~/.ssh/uni_wuerzburg_cluster.pub
-    - chmod 644 ~/.ssh/uni_wuerzburg_cluster
+    - chmod 644 ~/.ssh/uni_wuerzburg_cluster.pub
     - echo -e "Host login6 \n\t Hostname login6.informatik.uni-wuerzburg.de \n\t StrictHostKeyChecking no \n\t User ${VINGILOT_USER} \n\t IdentityFile ~/.ssh/uni_wuerzburg_cluster" > ~/.ssh/config
     - echo -e "Host vingilot \n\t Hostname vingilot.informatik.uni-wuerzburg.de \n\t StrictHostKeyChecking no \n\t User ${VINGILOT_USER} \n\t ProxyCommand ssh login6 nc %h %p \n\t IdentityFile ~/.ssh/uni_wuerzburg_cluster" >> ~/.ssh/config
     - chmod 600 ~/.ssh/config
