--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,5 +8,5 @@ stages:
 docker_image:
   stage: build
   script:
-    - ls
+    - apt update && apt install tree -y && tree
     - bash ./backend/ml/deployment/before_script.sh
