--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,5 +7,7 @@ stages:
 
 docker_image:
   stage: build
-  script:
+  before_script:
     - bash ./backend/ml/deployment/before_script.sh
+  script:
+    - bash ./backend/ml/deployment/main_script.sh
