Fixed _ for volume name also

--- a/backend/ml/deployment/kubernates.yaml
+++ b/backend/ml/deployment/kubernates.yaml
@@ -31,11 +31,11 @@ spec:
           containerPort: 5000
         volumeMounts:
           - mountPath: /workspace
-            name: project_code
+            name: project-code
       imagePullSecrets:
       - name: lsx-registry
       volumes:
-        - name: project_code
+        - name: project-code
           cephfs:
             monitors:
               - 132.187.14.16,132.187.14.17,132.187.14.19,132.187.14.20
