--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 default:
   tags:
     - ssh
+    - coder
 
 stages:
   - build
@@ -11,3 +12,5 @@ docker_image:
     - bash ./backend/ml/deployment/before_script.sh
   script:
     - bash ./backend/ml/deployment/main_script.sh
+  after_script:
+    - bash ./backend/ml/deployment/after_script.sh
