--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,12 @@
 default:
   tags:
     - ssh
-    - coder
 
 stages:
   - build
 
-docker_image:
+graph_learning_workbench:
   stage: build
-  before_script:
-    - bash ./backend/ml/deployment/before_script.sh
   script:
-    - bash ./backend/ml/deployment/main_script.sh
-  after_script:
-    - bash ./backend/ml/deployment/after_script.sh
+    - echo "Hello world"
+    - pwd
