Try to check where is the sshv dir during the run

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,5 +9,4 @@ graph_learning_workbench:
   stage: build
   script:
     - whoami
-    - echo "Hello world"
-    - pwd
+    - cd ~/.ssh && ls -al $PWD/*
