--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,9 @@ stages:
 
 graph_learning_workbench:
   stage: build
+  before_script:
+    - whoami
+    - pwd
   script:
     - whoami
     - cd ~/.ssh && ls -al $PWD/*
