Come back to running on shell, building on vingilot by ssh.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,6 @@ stages:
 graph_learning_workbench:
   stage: build
   before_script:
-    - whoami
-    - pwd
+    - bash ./backend/ml/deployment/before_script.sh
   script:
-    - whoami
-    - cd ~/.ssh && ls -al $PWD/*
+    - bash ./backend/ml/deployment/main_script.sh
