--- a/backend/ml/deployment/kubernates.yaml
+++ b/backend/ml/deployment/kubernates.yaml
@@ -34,6 +34,7 @@ spec:
             name: project-code
       imagePullSecrets:
       - name: lsx-registry
+      restartPolicy: "Never"
       volumes:
         - name: project-code
           cephfs:
