--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "svelte-switch-case": "^2.0.0",
     "tslib": "^2.4.0",
     "typescript": "^4.9.4",
-    "vite": "^3.2.0"
+    "vite": "^4.0.4"
   },
   "dependencies": {
     "@firebase/app-types": "^0.8.1",
@@ -41,6 +41,7 @@
     "graphml-js": "^0.4.0",
     "json-strictify": "^8.0.0",
     "lodash": "^4.17.21",
+    "lodash.clonedeep": "^4.5.0",
     "node-sass": "^8.0.0",
     "papaparse": "^5.3.2",
     "sass": "^1.56.1",
