--- a/backend/ml/requirements.yaml
+++ b/backend/ml/requirements.yaml
@@ -15,3 +15,4 @@ dependencies:
   - fastapi=0.89.1=pyhd8ed1ab_0
   - fastapi-healthcheck=0.2.12=pyhd8ed1ab_0
   - scikit-learn=1.2.0=py310h6a678d5_1
+  - redis-py=4.3.4=py310h06a4308_0
