--- a/backend/ml/requirements.yaml
+++ b/backend/ml/requirements.yaml
@@ -17,3 +17,4 @@ dependencies:
   - scikit-learn=1.2.0=py310h6a678d5_1
   - redis-py=4.3.4=py310h06a4308_0
   - python-dotenv=0.21.1=pyhd8ed1ab_0
+  - pika=1.3.1=pyhd8ed1ab_0
