--- a/backend/ml/requirements.yaml
+++ b/backend/ml/requirements.yaml
@@ -18,4 +18,4 @@ dependencies:
   - celery=5.2.7=pyhd8ed1ab_0
   - redis-py=4.3.4=py310h06a4308_0
   - python-dotenv=0.21.1=pyhd8ed1ab_0
-  - pika=1.3.1=pyhd8ed1ab_0
+  - uvicorn=0.20.0=py310hff52083_1
