--- a/backend/ml/deployment/production/kubernates.yaml
+++ b/backend/ml/deployment/production/kubernates.yaml
@@ -86,6 +86,8 @@ spec:
             value: "rabbitmq-service"
           - name: RABBITMQ_PORT
             value: "5672"
+          - name: C_FORCE_ROOT
+            value: "true"
         command: ["uvicorn", "app:create_app", "--factory", "--host", "0.0.0.0", "--port", "8000"]
         ports:
         - name: http
