Run docker as non-root user

--- a/backend/ml/deployment/production/Dockerfile
+++ b/backend/ml/deployment/production/Dockerfile
@@ -11,3 +11,10 @@ RUN apt-get update && apt-get upgrade -y
 RUN pip install --upgrade pip setuptools
 COPY ./requirements.yaml ./requirements.yaml
 RUN conda env update --file ./requirements.yaml --name base
+
+RUN groupadd -r app &&\
+    useradd -r -g app -d /home/app -s /sbin/nologin -c "Docker image user" app
+
+RUN chown app /workspace
+RUN chgrp app /workspace
+USER app
