--- a/backend/ml/requirements.yaml
+++ b/backend/ml/requirements.yaml
@@ -19,3 +19,4 @@ dependencies:
   - redis-py=4.3.4=py310h06a4308_0
   - python-dotenv=0.21.1=pyhd8ed1ab_0
   - uvicorn=0.20.0=py310hff52083_1
+  - pyhumps=1.6.1=pyh9f0ad1d_1
