--- a/backend/ml/requirements.yaml
+++ b/backend/ml/requirements.yaml
@@ -13,10 +13,10 @@ dependencies:
   - pyg=2.2.0=py310_torch_1.13.0_cu116
   - pandas=1.4.4=py310h6a678d5_0
   - fastapi=0.89.1=pyhd8ed1ab_0
-  - fastapi-healthcheck=0.2.12=pyhd8ed1ab_0
   - scikit-learn=1.2.0=py310h6a678d5_1
   - celery=5.2.7=pyhd8ed1ab_0
   - redis-py=4.3.4=py310h06a4308_0
   - python-dotenv=0.21.1=pyhd8ed1ab_0
   - uvicorn=0.20.0=py310hff52083_1
   - pyhumps=1.6.1=pyh9f0ad1d_1
+  - aio-pika=8.3.0=py310hff52083_0
