Change the way the application is deployed.

--- a/backend/ml/deployment/production/Dockerfile
+++ b/backend/ml/deployment/production/Dockerfile
@@ -5,11 +5,12 @@ ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
     PIP_NO_CACHE_DIR=off \
     PIP_DISABLE_PIP_VERSION_CHECK=1 \
-    PIP_DEFAULT_TIMEOUT=100
+    PIP_DEFAULT_TIMEOUT=100 \
+    C_FORCE_ROOT=true
 
 RUN apt-get update && apt-get upgrade -y
 RUN pip install --upgrade pip setuptools
 COPY ./requirements.yaml ./requirements.yaml
+COPY ./requirements.txt ./requirements.txt
 RUN conda env update --file ./requirements.yaml --name base
-
-ENV C_FORCE_ROOT=true
+RUN pip install -r requirements.txt
