--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,8 @@ stages:
 
 graph_learning_workbench:
   stage: build
+  environment:
+    name: production
   before_script:
     - bash ./backend/ml/deployment/production/before_script.sh
   script:
