--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ graph_learning_workbench:
   stage: build
   environment:
     name: production
+    url: http://34.89.131.139:8000/
   before_script:
     - bash ./backend/ml/deployment/production/before_script.sh
   script:
