--- a/backend/ml/requirements.yaml
+++ b/backend/ml/requirements.yaml
@@ -24,3 +24,4 @@ dependencies:
   - mlflow=2.1.1=py310ha13cd29_0
   - aiohttp=3.8.4=py310h1fa729e_0
   - networkx=2.8.4=py310h06a4308_0
+  - dill=0.3.6=pyhd8ed1ab_1
