--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -14,8 +14,8 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "axios": "1.2.2",
-    "firebase-admin": "^11.5.0",
+    "axios": "^1.2.2",
+    "firebase-admin": "^10.2.0",
     "firebase-functions": "^3.21.0"
   },
   "devDependencies": {
