--- a/backend/ml/requirements.yaml
+++ b/backend/ml/requirements.yaml
@@ -19,7 +19,7 @@ dependencies:
   - redis-py=4.3.4=py310h06a4308_0
   - python-dotenv=0.21.1=pyhd8ed1ab_0
   - uvicorn=0.20.0=py310hff52083_1
-  - pyhumps=1.6.1=pyh9f0ad1d_1
+  - stringcase=1.2.0=py_0
   - aio-pika=8.3.0=py310hff52083_0
   - mlflow=2.1.1=py310ha13cd29_0
   - aiohttp=3.8.4=py310h1fa729e_0
