--- a/backend/ml/requirements.yaml
+++ b/backend/ml/requirements.yaml
@@ -26,3 +26,4 @@ dependencies:
   - networkx=2.8.4=py310h06a4308_0
   - dill=0.3.6=pyhd8ed1ab_1
   - more-itertools=8.12.0=pyhd3eb1b0_0
+  - openai=0.27.0=pyhd8ed1ab_0
