--- a/backend/ml/deployment/production/kubernates/application/deployment.yaml
+++ b/backend/ml/deployment/production/kubernates/application/deployment.yaml
@@ -36,7 +36,7 @@ spec:
             value: "guest"
           - name: RABBITMQ_PASSWORD
             value: "guest"
-        command: ["uvicorn", "app:create_app", "--factory", "--host", "0.0.0.0", "--port", "8000"]
+        command: ["uvicorn", "app:create_app", "--factory", "--host", "0.0.0.0", "--port", "8000", "--workers", "4"]
         ports:
         - name: http
           containerPort: 8000
