--- a/backend/ml/deployment/production/kubernates/mlflow/deployment.yaml
+++ b/backend/ml/deployment/production/kubernates/mlflow/deployment.yaml
@@ -31,7 +31,7 @@ spec:
         - name: http
           containerPort: 5000
         volumeMounts:
-          - mountPath: /mlruns
+          - mountPath: /mlflow
             name: mlflow-directory
       priorityClassName: "research-high"
       imagePullSecrets:
