--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,7 @@ graph_learning_workbench:
     changes:
       - .gitlab-ci.yml
       - backend/ml/deployment/production/Dockerfile
-      - backend/ml/deployment/production/kubernates.yaml
+      - "**/**/**/**/**/*.yaml"
+      - "**/**/**/**/**/**/*.yaml"
       - "**/**/**/*.py"
       - "**/**/**/**/*.sh"
