--- a/backend/ml/deployment/production/kubernates/celery.yaml
+++ b/backend/ml/deployment/production/kubernates/celery.yaml
@@ -41,7 +41,7 @@ spec:
           - name: MLFLOW_URI
             value: "/mlflow"
           - name: USERNAME
-            value: 1317
+            value: "1317"
         command: ["celery", "-A", "task_manager.tasks", "worker", "--concurrency", "4"]
         volumeMounts:
           - mountPath: /workspace
