--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "axios": "^1.2.2",
     "firebase-admin": "^10.2.0",
-    "firebase-functions": "^3.21.0"
+    "firebase-functions": "^3.21.0",
+    "flatted": "^3.2.7"
   },
   "devDependencies": {
     "typescript": "^4.6.4"
