--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,7 +39,9 @@
     "firebase": "^9.14.0",
     "graph-format-converter": "^1.5.2",
     "graphml-js": "^0.4.0",
+    "html2canvas": "^1.4.1",
     "json-strictify": "^8.0.0",
+    "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
     "node-sass": "^8.0.0",
