--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "node-sass": "^8.0.0",
     "papaparse": "^5.3.2",
     "sass": "^1.56.1",
+    "svelte-countup": "^0.2.6",
     "svelte-vega": "^1.2.0",
     "train-test-split": "^1.0.0",
     "vega": "^5.22.1",
