--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-<<<<<<< HEAD
-firebase_config.ts
-yarn.lock
-*.yarn-integrity
-=======
 # File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
 # Created by https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,visualstudiocode
@@ -56,7 +51,7 @@ $RECYCLE.BIN/
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
->>>>>>> style
 node_modules/
 package.json
 package-lock.json
+frontend/yarn.lock
